tests/baselines/reference/moduleImport.errors.txt
moduleImport.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduleImport.ts(1,10): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduleImport.ts(1,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
moduleImport.ts(2,17): error TS2694: Namespace 'X' has no exported member 'Y'.


==== moduleImport.ts (4 errors) ====
    module A.B.C {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
             ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
               ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	import XYZ = X.Y.Z;
    	               ~
!!! error TS2694: Namespace 'X' has no exported member 'Y'.
    	export function ping(x: number) {
    		if (x>0) XYZ.pong (x-1);
    	}
    }
    
    namespace X {
    	import ABC = A.B.C;
    	export function pong(x: number) {
    		if (x > 0) ABC.ping(x-1);
    	}
    }